--- a/assets/css/base/global.css
+++ b/assets/css/base/global.css
@@ -18,4 +18,14 @@
 
 body {
   font-family: var(--primary-font);
+  background-color: var(--mega-sena);
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
+main {
+  padding: 92px 95px;
+  width: 100%;
+  height: 100%;
 }
