--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,2 +1,4 @@
 @import url(./base/reset.css);
 @import url(./base/global.css);
+@import url(./layouts/cicle_background.css);
+@import url(./layouts/input_select.css);
