:sparkles: feat: logo e texto de baixo criado e estilizado

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,5 @@
 @import url(./base/global.css);
 @import url(./layouts/cicle_background.css);
 @import url(./layouts/input_select.css);
+@import url(./layouts/text_down.css);
+@import url(./layouts/logo.css);
