--- a/assets/css/base/global.css
+++ b/assets/css/base/global.css
@@ -28,4 +28,8 @@ main {
   padding: 92px 95px;
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
 }
