:sparkles: feat: Números sorteados criado e estilizado

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,3 +4,4 @@
 @import url(./layouts/input_select.css);
 @import url(./layouts/text_down.css);
 @import url(./layouts/logo.css);
+@import url(./layouts/number.css);
