--- a/assets/css/base/global.css
+++ b/assets/css/base/global.css
@@ -29,7 +29,23 @@ main {
   width: 100%;
   height: 100%;
   display: flex;
+
+  align-items: center;
+  justify-content: space-between;
+}
+
+.right {
+  width: 50%;
+  height: 100%;
+  display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
+}
+
+.left {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
 }
