--- a/assets/css/base/global.css
+++ b/assets/css/base/global.css
@@ -25,7 +25,6 @@ body {
 }
 
 main {
-  padding: 92px 95px;
   width: 100%;
   height: 100%;
   display: flex;
@@ -35,7 +34,8 @@ main {
 }
 
 .right {
-  width: 50%;
+  padding: 92px 0px 92px 95px;
+  width: 40%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -44,6 +44,11 @@ main {
 }
 
 .left {
+  width: 60%;
+  clip-path: ellipse(76% 105% at 77% 51%);
+
+  background-color: var(--background-white);
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
