--- a/assets/css/base/global.css
+++ b/assets/css/base/global.css
@@ -50,7 +50,44 @@ main {
   background-color: var(--background-white);
   height: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 40px;
+  flex-wrap: wrap;
+}
+
+/* - - - - - Portátil L - - - - - - */
+@media (max-width: 1130px) {
+}
+
+/* - - - - - Portátil - - - - - - - */
+@media (max-width: 1024px) {
+  main {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .left {
+    width: 100%;
+    clip-path: ellipse(100% 67% at 53% 75%);
+    padding: 0 20px;
+  }
+
+  .right {
+    padding: 60px 0 20px;
+    width: 100%;
+    align-items: center;
+  }
+}
+
+/* - - - - - Tablet - - - - - - - - */
+@media (max-width: 800px) {
+}
+
+/* - - - - - Mobile Grande - - - -  */
+@media (max-width: 600px) {
+}
+
+/* - - - - - Mobile Pequeno - - - - */
+@media (max-width: 440px) {
 }
