--- a/assets/css/layouts/logo.css
+++ b/assets/css/layouts/logo.css
@@ -10,6 +10,7 @@
   font-size: 30px;
   font-weight: 700;
   color: var(--text-white);
+  text-transform: uppercase;
 }
 
 /* - - - - - Portátil L - - - - - - */
