--- a/assets/css/layouts/number.css
+++ b/assets/css/layouts/number.css
@@ -4,10 +4,11 @@
   justify-content: center;
   gap: 40px;
   flex-wrap: wrap;
+  padding: 0 30px 0 40px;
 }
 .numbers__item {
-  width: 80px;
-  height: 80px;
+  width: 75px;
+  height: 75px;
   clip-path: circle();
   background-color: var(--text-white);
 
@@ -25,20 +26,27 @@
 .left__text-left {
   position: absolute;
   bottom: 90px;
-
   font-size: 14px;
   font-weight: 400;
   color: var(--text-black);
   text-align: center;
-  padding: 0 20px;
+  margin-left: 30px;
 }
 
 /* - - - - - Portátil L - - - - - - */
 @media (max-width: 1130px) {
+  .left__text-left {
+    max-width: 500px;
+    bottom: 70px;
+  }
 }
 
 /* - - - - - Portátil - - - - - - - */
 @media (max-width: 1024px) {
+  .left__numbers {
+    gap: 20px;
+    padding: 0px 0;
+  }
   .numbers__item {
     width: 60px;
     height: 60px;
@@ -51,13 +59,34 @@
   .left__text-left {
     bottom: 37px;
   }
+
+  .left__text-left {
+    max-width: none;
+    bottom: 20px;
+    margin-left: 0;
+    padding: 0 20px;
+  }
 }
 /* - - - - - Tablet - - - - - - - - */
 @media (max-width: 800px) {
 }
 
 /* - - - - - Mobile Grande - - - -  */
-@media (max-width: 600px) {
+@media (max-width: 610px) {
+  .left__text-left {
+    font-size: 12px;
+  }
+
+  .numbers__item {
+    width: 50px;
+    height: 50px;
+  }
+
+  .item__text {
+    font-weight: 700;
+    font-size: 16px;
+    color: var(--text-black);
+  }
 }
 
 /* - - - - - Mobile Pequeno - - - - */
